Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/ConfigurationAttribute__c.object-meta.xml
<CustomObject>
    <customHelpPage>ConfigurationAttributeHelp</customHelpPage>
    <description>Product configuration attribute.</description>
    <label>Configuration Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>