Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/fields/AppliedImmediately__c.field-meta.xml
<CustomField>
    <fullName>AppliedImmediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates changes to this configuration attribute should apply immediately.</description>
    <inlineHelpText>Select the checkbox to immediately apply changes to this option. Use sparingly to avoid slow user experience.</inlineHelpText>
    <label>Apply Immediately</label>
    <type>Checkbox</type>
</CustomField>