Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/fields/AutoSelect__c.field-meta.xml
<CustomField>
    <fullName>AutoSelect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the value of this attribute when adding a product from a Dynamic Feature using the value of the added product&apos;s matching field.</description>
    <inlineHelpText>Set the value of this attribute when adding a product from a Dynamic Feature using the value of the added product&apos;s matching field.</inlineHelpText>
    <label>Auto-Select</label>
    <type>Checkbox</type>
</CustomField>