Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/fields/DefaultField__c.field-meta.xml
<CustomField>
    <fullName>DefaultField__c</fullName>
    <description>API of the target field on the default object for the default value of the attribute.</description>
    <inlineHelpText>API of the target field on the default object for the default value of the attribute.</inlineHelpText>
    <label>Default Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>