Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/fields/Global__c.field-meta.xml
<CustomField>
    <fullName>Global__c</fullName>
    <description>Indicates if this attribute has a global target field.</description>
    <formula>CONTAINS(TEXT(TargetField__c), &apos;.&apos;)</formula>
    <inlineHelpText>Indicates if this attribute has a global target field.</inlineHelpText>
    <label>Global</label>
    <type>Checkbox</type>
</CustomField>