Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/fields/Hidden__c.field-meta.xml
<CustomField>
    <fullName>Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</description>
    <inlineHelpText>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>