Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Position of the attribute.</description>
    <inlineHelpText>Specify position of this attribute. Top renders above the options. Bottom renders below.</inlineHelpText>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
                <default>true</default>
                <label>Top</label>
            </value>
            <value>
                <fullName>Bottom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>