Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the attributes requires a value.</description>
    <inlineHelpText>Specify whether this attribute requires a value.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>