Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/fields/ShownValues__c.field-meta.xml
<CustomField>
    <fullName>ShownValues__c</fullName>
    <description>Values from the backing picklist field that should be shown on this bundle.</description>
    <inlineHelpText>Enter values from the corresponding picklist field on Product Option object that you want to be shown on this bundle.</inlineHelpText>
    <label>Shown Values</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>