Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/recordTypes/Configuration_Attribute.recordType-meta.xml
<RecordType>
    <fullName>Configuration_Attribute</fullName>
    <active>true</active>
    <description>Configuration Attribute associated to a product</description>
    <label>Configuration Attribute</label>
</RecordType>