Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/recordTypes/Global_Attribute.recordType-meta.xml
<RecordType>
    <fullName>Global_Attribute</fullName>
    <active>true</active>
    <description>Definition of an Attribute Item</description>
    <label>Global Attribute</label>
</RecordType>