Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/validationRules/Column_Order_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Column_Order_is_required</fullName>
    <active>true</active>
    <description>Column Order is required</description>
    <errorConditionFormula>if (Text( ColumnOrder__c ) == &apos;&apos;, true, false)</errorConditionFormula>
    <errorMessage>Column Order is required.</errorMessage>
</ValidationRule>