Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TargetField__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>