Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/listViews/ConfigurationAttributes.listView-meta.xml
<ListView>
    <fullName>ConfigurationAttributes</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>TargetField__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ConfigurationAttribute__c.Configuration_Attribute</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Configuration Attributes</label>
    <language>en_US</language>
</ListView>