Salesforce CPQ/main/default/objects/ConfigurationAttribute__c/listViews/GlobalAttributes.listView-meta.xml
<ListView>
    <fullName>GlobalAttributes</fullName>
    <columns>NAME</columns>
    <columns>TargetField__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ConfigurationAttribute__c.Global_Attribute</value>
    </filters>
    <label>Global Attributes</label>
    <language>en_US</language>
</ListView>